--- a/TestBench/CMakeLists.txt
+++ b/TestBench/CMakeLists.txt
@@ -15,8 +15,8 @@ if(WIN32)
 endif()
 
 set(TestBench_DEFINES "")
-set(TestBench_PARENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")  # allow to hanve #include "TestBench/<>", to match install
-set(TestBench_INCLUDE_DIRS "${PROJECT_INCLUDE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/..")
+set(TestBench_PARENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
+set(TestBench_INCLUDE_DIRS "${PROJECT_INCLUDE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
 set(TestBench_EXTERNAL_LIBS "")
 set(TestBench_EXTERNAL_DLLS "")
 set(TestBench_EXTERNAL_DEPS "")
@@ -24,57 +24,50 @@ set(TestBench_EXTERNAL_DEPS "")
 # find torch to avoid conflicts across sub-projects
 if(NOT TORCH_FOUND)
 	find_package(Torch REQUIRED)
-    list(APPEND TestBench_INCLUDE_DIRS  "${TORCH_INCLUDE_DIR}")
-    list(APPEND TestBench_EXTERNAL_LIBS "${TORCH_LIBRARIES}")
-    list(APPEND TestBench_EXTERNAL_DLLS "${TORCH_DLLS}")
-    list(APPEND TestBench_EXTERNAL_DEPS "torch")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 endif()
+list(APPEND TestBench_INCLUDE_DIRS  "${TORCH_INCLUDE_DIR}")
+list(APPEND TestBench_EXTERNAL_LIBS "${TORCH_LIBRARIES}")
+list(APPEND TestBench_EXTERNAL_DLLS "${TORCH_DLLS}")
+list(APPEND TestBench_EXTERNAL_DEPS "torch")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 if(NOT TORCHVISION_FOUND)
     # https://github.com/pytorch/vision
     find_package(TorchVision REQUIRED)
-    list(APPEND TestBench_INCLUDE_DIRS  "${TORCHVISION_INCLUDE_DIRS}")
-    list(APPEND TestBench_EXTERNAL_LIBS "${TORCHVISION_TARGETS}")
-    list(APPEND TestBench_EXTERNAL_DLLS "${TORCHVISION_DLLS}")
 endif()
+list(APPEND TestBench_INCLUDE_DIRS  "${TORCHVISION_INCLUDE_DIRS}")
+list(APPEND TestBench_EXTERNAL_LIBS "${TORCHVISION_TARGETS}")
+list(APPEND TestBench_EXTERNAL_DLLS "${TORCHVISION_DLLS}")
 if(NOT OPENCV_FOUND)
     # https://github.com/opencv/opencv
     # (better if Torch/TorchVision also compiled using it for optimizations)
 	find_package(OpenCV REQUIRED)
-	set(OPENCV_INCLUDE_DIRS "${opencv_INCLUDE_DIR}")  # compat MSVC
-	message(DEBUG "Detected OpenCV includes: ${OPENCV_INCLUDE_DIRS}")
-	message(DEBUG "OPENCV VERSION MAJOR: ${OpenCV_VERSION_MAJOR}")
-	list(APPEND TestBench_INCLUDE_DIRS  "${OPENCV_INCLUDE_DIRS}")
-    list(APPEND TestBench_EXTERNAL_LIBS "${OPENCV_LIBRARIES}")
-    list(APPEND TestBench_EXTERNAL_DLLS "${OPENCV_DLLS}")
 endif()
+set(OPENCV_INCLUDE_DIRS "${opencv_INCLUDE_DIR}")  # compat MSVC
+message(DEBUG "Detected OpenCV includes: ${OPENCV_INCLUDE_DIRS}")
+message(DEBUG "OPENCV VERSION MAJOR: ${OpenCV_VERSION_MAJOR}")
+list(APPEND TestBench_INCLUDE_DIRS  "${OPENCV_INCLUDE_DIRS}")
+list(APPEND TestBench_EXTERNAL_LIBS "${OPENCV_LIBRARIES}")
+list(APPEND TestBench_EXTERNAL_DLLS "${OPENCV_DLLS}")
 if(NOT CLI11_FOUND)
     # https://github.com/CLIUtils/CLI11
     find_package(CLI11 REQUIRED)
-    list(APPEND TestBench_INCLUDE_DIRS   "${CLI11_INCLUDE_DIR}")
-    list(APPEND TestBench_EXTERNAL_DEPS  "${CLI11_TARGETS}")
 endif()
+list(APPEND TestBench_INCLUDE_DIRS   "${CLI11_INCLUDE_DIR}")
+list(APPEND TestBench_EXTERNAL_DEPS  "${CLI11_TARGETS}")
 
-list(APPEND TestBench_DEFINES -DUNICODE)	# x64
+list(APPEND TestBench_DEFINES -DUNICODE)
 if(NOT ${ARCH_POSTFIX} STREQUAL "")
 	list(APPEND TestBench_DEFINES -DAMD64)	# x64
 endif()
 set(TestBench_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(TestBench_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-message(DEBUG "TestBench")
-message(DEBUG "  DEFINES: ${TestBench_DEFINES}")
-message(DEBUG "  INCLUDE: ${TestBench_INCLUDE}")
-message(DEBUG "  SOURCES: ${TestBench_SOURCES}")
-message(DEBUG "EXternal")
-message(DEBUG "  INCLUDE: ${TestBench_INCLUDE_DIRS}")
-message(DEBUG "  DEPS:    ${TestBench_EXTERNAL_DEPS}")
-message(DEBUG "  LIBS:    ${TestBench_EXTERNAL_LIBS}")
-message(DEBUG "  DLLS:    ${TestBench_EXTERNAL_DLLS}")
 
-message(DEBUG "Headers files for project TestBench")
-message_items("${TestBench_INCLUDE}")
-message(DEBUG "Source files for project TestBench")
-message_items("${TestBench_SOURCES}")
+message(DEBUG "===========================================")
+message_pkg_refs("TestBench" "${TestBench_DEFINES}" "${TestBench_INCLUDE}" "${TestBench_SOURCES}" "" "" "")
+message(DEBUG "-------------------------------------------")
+message_pkg_refs("External" "" "${TestBench_INCLUDE_DIRS}" ""
+                 "${TestBench_EXTERNAL_DEPS}" "${TestBench_EXTERNAL_LIBS}" "${TestBench_EXTERNAL_DLLS}")
+message(DEBUG "===========================================")
 
 add_executable(TestBench ${TestBench_INCLUDE} ${TestBench_SOURCES})
 target_include_directories(TestBench PUBLIC "${TestBench_INCLUDE_DIRS}")
