update readme WITH_<> options and add more compilation/usage details

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ endif()
 option(WITH_DATA_AUGMENTATION "Include data augmentation operations (Requires OpenCV)" ON)
 option(WITH_TEST_BENCH "Build TestBench CLI utility." ON)
 option(WITH_TESTS "Build tests modules" OFF)
-option(WITH_PYTHON "Enable Python support. Must match compilation of Torch library." ON)
+option(WITH_PYTHON "Enable Python support. Must match compilation of Torch library." OFF)
 message(DEBUG "Options:")
 list(APPEND CMAKE_MESSAGE_INDENT "  ")
 message(DEBUG "WITH External Module ... ${WITH_EXTERNAL_MODULE}")
@@ -129,7 +129,7 @@ list(APPEND EXTERNAL_DLLS "${TORCHVISION_DLLS}")
 
 # depending on Python bindinds or not, create library or module
 if(${WITH_PYTHON})
-    if(${WTIH_PYTHON} AND (${WITH_TESTS} OR ${WITH_TEST_BENCH}))
+    if(${WITH_TESTS} OR ${WITH_TEST_BENCH})
         message(FATAL "Cannot enable simultaneous Tests/TestBench and Python modules!")
     endif()
 
@@ -208,6 +208,21 @@ if(WITH_DATA_AUGMENTATION)
     list(APPEND EXTERNAL_DLLS "${OPENCV_DLLS}")
     target_include_directories(${PROJECT_TARGET} PUBLIC ${INCLUDE_DIRS} ${PROJECT_INCLUDE_DIR})
     target_link_libraries(${PROJECT_TARGET} PUBLIC ${EXTERNAL_LIBS})
+endif()
+
+option(WITH_PRECOMPILED_HEADER "Use precompiled stdafx headers" OFF)
+option(MSVC_Z7_OVERRIDE "Enforce MSVC /Z7 CXX flag when using precompiled headers to fix sccache bug (recommended)" ON)
+if(${WITH_PRECOMPILED_HEADER})
+	message(STATUS "${PROJECT_TARGET} package using precompiled headers (see: WITH_PRECOMPILED_HEADER)")
+	target_precompile_headers(${PROJECT_TARGET} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../stdafx.h")
+    target_compile_definitions(${PROJECT_TARGET} PUBLIC PRECOMPILE_TORCH)
+    target_include_directories(${PROJECT_TARGET} PRIVATE ${TORCH_INCLUDE_DIRECTORIES})
+	if(MSVC AND MSVC_Z7_OVERRIDE)
+		# enforce the flag to avoid incompatibility with other targets that will use Core
+		# by default cmake will specify /Z7 to debug targets not adding (just using) precompiled headers
+		string(REGEX REPLACE "/Z[iI7]" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Z7")
+	endif()
 endif()
 
 message(DEBUG "===========================================")
