--- a/TestBench/TestBench.vcxproj
+++ b/TestBench/TestBench.vcxproj
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">H:\projets\efficientnet-libtorch\build\Debug\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">H:\projets\crim-libtorch-extensions\build\Debug\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TestBench.dir\Debug\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TestBench</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.exe</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</GenerateManifest>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">H:\projets\efficientnet-libtorch\build\Release\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">H:\projets\crim-libtorch-extensions\build\Release\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">TestBench.dir\Release\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">TestBench</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.exe</TargetExt>
@@ -56,7 +56,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>CLI11/include;c:\Program Files (x86)\torchvision\include;D:\opencv\install\include;H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;D:\libtorch\libtorch-1.8.1-release\include\torch\csrc\api\include;D:\libtorch\libtorch-1.8.1-release\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>CLI11/include;c:\Program Files (x86)\torchvision\include;D:\opencv\install\include;H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;D:\libtorch\libtorch-1.8.1-release\include\torch\csrc\api\include;D:\libtorch\libtorch-1.8.1-release\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <CompileAs>CompileAsCpp</CompileAs>
@@ -75,10 +75,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;WITH_CUDA;CMAKE_INTDIR=\"Debug\";TestBench_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -97,8 +97,8 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>H:/projets/efficientnet-libtorch/build/Debug/TestBench.lib</ImportLibrary>
-      <ProgramDataBaseFile>H:/projets/efficientnet-libtorch/build/Debug/TestBench.pdb</ProgramDataBaseFile>
+      <ImportLibrary>H:/projets/crim-libtorch-extensions/build/Debug/TestBench.lib</ImportLibrary>
+      <ProgramDataBaseFile>H:/projets/crim-libtorch-extensions/build/Debug/TestBench.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
     <ProjectReference>
@@ -107,7 +107,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>CLI11/include;c:\Program Files (x86)\torchvision\include;D:\opencv\install\include;H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;D:\libtorch\libtorch-1.8.1-release\include\torch\csrc\api\include;D:\libtorch\libtorch-1.8.1-release\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>CLI11/include;c:\Program Files (x86)\torchvision\include;D:\opencv\install\include;H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;D:\libtorch\libtorch-1.8.1-release\include\torch\csrc\api\include;D:\libtorch\libtorch-1.8.1-release\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -125,10 +125,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;WITH_CUDA;CMAKE_INTDIR=\"Release\";TestBench_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>H:\projets\efficientnet-libtorch;H:\projets\efficientnet-libtorch\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>H:\projets\crim-libtorch-extensions;H:\projets\crim-libtorch-extensions\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -147,8 +147,8 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>H:/projets/efficientnet-libtorch/build/Release/TestBench.lib</ImportLibrary>
-      <ProgramDataBaseFile>H:/projets/efficientnet-libtorch/build/Release/TestBench.pdb</ProgramDataBaseFile>
+      <ImportLibrary>H:/projets/crim-libtorch-extensions/build/Release/TestBench.lib</ImportLibrary>
+      <ProgramDataBaseFile>H:/projets/crim-libtorch-extensions/build/Release/TestBench.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
