resolve issues following last PR merge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,17 @@ set(PROJECT_SOURCES_DIR "${PROJECT_SOURCE_DIR}/source")
 file(GLOB_RECURSE PROJECT_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${PROJECT_INCLUDE_DIR}/*.h")
 file(GLOB_RECURSE PROJECT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${PROJECT_SOURCES_DIR}/*.cpp")
 
+if(NOT WIN32)
+    file(GLOB_RECURSE EXCLUDE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${PROJECT_INCLUDE_DIR}/windows/*.h")
+    file(GLOB_RECURSE EXCLUDE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${PROJECT_SOURCES_DIR}/windows/*.cpp")
+    foreach(file ${EXCLUDE_HEADERS})
+        list(REMOVE_ITEM PROJECT_HEADERS ${file})
+    endforeach()
+    foreach(file ${EXCLUDE_SOURCES})
+        list(REMOVE_ITEM PROJECT_SOURCES ${file})
+    endforeach()
+endif()
+
 # data augmentation required by test bench
 if(NOT WITH_DATA_AUGMENTATION AND WITH_TEST_BENCH)
     message(WARNING "Forcing WITH_DATA_AUGMENTATION=ON because WITH_TEST_BENCH was requested")
